# genegraph-to-phenopacket

./: .gitignore  CLAUDE.md  README.md  code_exploartion.ipynb  embed-test.ipynb  genegraph-validity-pyld.ipynb  genegraph_quick_eda.ipynb  genegraph_to_phenopacket_202506-Copy1.ipynb  genegraph_to_phenopacket_202506.ipynb  get-data.bash  gg_to_phenopacket_transformation.ipynb  pixi.toml  probands_with_phenotypes.tsv  pyproject.toml
docs/: gci-to-phenopacket-data-map.md
input/gene-validity-jsonld-20251030/: gg_00087989-426c-4d42-846d-fbfdade9d9fav1.0.json  gg_00140591-caa8-4d47-b4ca-3f0577b16d73v2.1.json  gg_002cfb92-2e36-47c5-9e27-0298cdd0e546v1.0.json  gg_002d2ec6-ee65-4c8d-8032-7e338fb47d27v1.0.json  gg_002fb388-fa6c-49ff-8284-109a4609858fv1.0.json  gg_0052e01a-b447-464b-93c7-304fa6a2afe6v1.0.json  gg_0057caed-b37d-41d7-bd79-1e9e19b3c1efv1.0.json  gg_00663600-cb24-4097-a6fe-20a4a63c1145v1.0.json  gg_0079534f-5bbc-44fd-94d6-c738779cccafv1.0.json  gg_0082b295-3c5a-4fe9-a829-274c96efd0b8v1.0.json  (+3361 more)
notebooks/: extract-genegraph-validity-phenotypes.ipynb  genegraph-validity-pyld.ipynb
output/: disease_w_temporal_data_and_phenotypes.csv  disease_w_temporal_info.csv
plan/: jsonld-transformer-rewrite-plan.md
plans/: 2026-04-14-code-review-fixes.md  20260429-use-ontology-access-kit-oaklib.md
src/: config.py  data_transformer.py  gci_main.py  gci_transformer.py  main.py
tests/: test_allele_registry_client.py  test_caid_client.py  test_cli.py  test_data_transformer.py  test_gci_transformer.py  test_logger.py  test_ontologies.py  test_pubmed_downloader.py
(+2931 files in other folders)
